--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,35 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Helvetica, Roboto, Arial, sans-serif;
-  color: brown;
+  font-family: Arial, sans-serif;
+  background-color: #45523E;
+  color: rgb(72, 206, 183);
+}
+.loginContainer {
+  align-content: center;
+  margin-left: 25%;
+  margin-right: 25%;
+  border: 5px solid #a48ba8;
+  border-radius: 5px;
+  padding: 1em;
+  text-align: center;
+  width: 50%;
+}
+.loginForm{
+  label{
+    display: block;
+    justify-content: left;
+    margin-bottom: .5em;
+  }
+  input{
+    display: inline-block;
+    justify-content: right;
+    margin-bottom: 1.5em;
+  }
+  button{
+    display: block;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 1em;
+    text-align: center;
+    width: 20%;
+  }
 }
