setup for pgdb, next is adding CRUD funcionality

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,5 +31,10 @@ body {
     margin-bottom: 1em;
     text-align: center;
     width: 20%;
+    background-color: green;
+    color: antiquewhite;
+    font-style: arial;
+    border-width: 5px;
+    border-color: #a48ba8;
   }
 }
