bug fixes with routing on page reload, creating jwts

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ body {
     margin-bottom: 1em;
     text-align: center;
     width: 20%;
-    background-color: transparent;
+    background-color: rgb(87, 161, 53);
     color: antiquewhite;
     font-style: arial;
     border-width: 5px;
