--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ button{
   1px 1px 0 #000,
   1px -1px 0 #000,
   -1px -1px 0 #000;
+  border-radius: 8px;
                         
       }
   
@@ -80,7 +81,15 @@ button{
     padding-left: 3%;
   }
 }
-
+.DayModal-Modal {
+  background-color: rgba(0, 0, 139, 1);
+  border: 4px solid purple;
+  border-radius: 10px;
+  left: 25%;
+  position: absolute;
+  top: 25%;
+  width: 50%;
+}
 
 
   
